# pydrolink

./: API.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
pydrolink/: __init__.py  cli.py  client.py  meter.py  parsers.py  service.py
tests/: test_meter.py  test_parsers.py  test_service.py
