[tool.poetry]
name = "pydrolink"
version = "0.1.0"
description = "Library for interfacing with Hydrolink API"
authors = ["Matti Laakso <matti.laakso@outlook.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {git = "https://github.com/aio-libs/aiohttp.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
